API -  AUTH flow - UPDATE
refresh token API modified
